# KR

./: CMakeLists.txt  README.md  audio_exercise.h  audio_exercises.txt  audio_widget.cpp  audio_widget.h  controller.cpp  controller.h  exercise.h  exercise_page.cpp  exercise_page.h  input_exercise.h  input_exercises.txt  input_widget.cpp  input_widget.h  main.cpp  main_page.cpp  main_page.h  model.cpp  model.h  pick_exercise.h  pick_exercise_widget.cpp  pick_exercise_widget.h  pick_exercises.txt  pick_widget.cpp  pick_widget.h  randomizer.cpp  randomizer.h  resources.qrc
